--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,3 +1,14 @@
+$primary-color: black;
+@import 'loaders.css/src/animations/ball-spin-fade-loader.scss';
+
+.loader-hidden {
+  display: none;
+}
+.loader-active {
+  display: block;
+}
+
+
 .App {
   text-align: center;
 }
@@ -29,6 +40,7 @@
     @media screen and (max-width: 900px) {
       display: none;
     }
+    cursor: pointer;
     &__main{
       font-family: Tenor Sans;
       font-size: 48px;
